--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="/images/favicon.svg" type="image/svg+xml" />
     <link rel="icon" href="/images/favicon-32x32.png" type="image/png" />
-    <link rel="icon" href="/images/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="theme-color" content="#5ac75f" />
     <link rel="apple-touch-icon" sizes="32x32" href="/images/favicon-32x32.png" />
     <link rel="apple-touch-icon" sizes="48x48" href="/images/compass-icon-square.svg" />
@@ -19,14 +19,13 @@
     <link rel="manifest" href="/manifest.json" crossorigin="anonymous" />
     <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/0.17523473.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.3a095137.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.b817f804.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.21b00dcf.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.aefaa6e0.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.db4a1934.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.7f2b64d4.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.84b18ab9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.41c905a7.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.697c7655.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/constants.94f7c113.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Link.c3d01ee6.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.e092a57e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Link.6e972e4a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.0976737d.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.2eed9e42.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/PostListing.d6662397.js">
@@ -113,7 +112,7 @@
 			
 			<script>
 				{
-					__sveltekit_1nqrec1 = {
+					__sveltekit_ug0yvz = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -123,8 +122,8 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},{"type":"data","data":{posts:[{title:"Chalmers Guest Lecture on Social Entrepreneurship",date:new Date(1683504000000),tags:["Entrepreneurship","Co-operatives","Economics"],featured:true,slug:"chalmers-guest-lecture-social-entrepreneurship"},{title:"Improving Oh My Zsh Startup Time with Lazy Loading",date:new Date(1679529600000),tags:["DX","Code Snippet"],slug:"improving-shell-startup-with-lazy-loading"},{title:"Automatic Internal and External Links in SvelteKit",date:new Date(1627689600000),tags:["TypeScript","Svelte","SvelteKit","Code Snippet"],slug:"automatic-internal-external-links-in-sveltekit"},{title:"Use the Web Crypto API to Generate a Cryptographically Secure Password in the Browser and Node.js",date:new Date(1627430400000),tags:["JavaScript","Web Crypto API","Node.js"],slug:"generate-password-in-browser-web-crypto-api"},{title:"Rename File Extensions with Node.js",date:new Date(1627344000000),tags:["Code Snippet","JavaScript","Node.js"],slug:"nodejs-rename-file-extensions"},{title:"Update Your Git Commit Email Address Before Pushing to Remote Repository",date:new Date(1626998400000),tags:["Git","Code Snippet"],slug:"git-rewrite-commit-email"},{title:"Use Firefox Bookmark Keywords to Quickly Get to Websites You Visit Often with Only 4 Keystrokes",date:new Date(1626912000000),tags:["Firefox","Productivity"],slug:"firefox-bookmark-keywords"}]},"uses":{}}];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.3a095137.js"),
-						import("./_app/immutable/entry/app.db4a1934.js")
+						import("./_app/immutable/entry/start.b817f804.js"),
+						import("./_app/immutable/entry/app.84b18ab9.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
