--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="/images/favicon.svg" type="image/svg+xml" />
     <link rel="icon" href="/images/favicon-32x32.png" type="image/png" />
-    <link rel="icon" href="/images/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="theme-color" content="#5ac75f" />
     <link rel="apple-touch-icon" sizes="32x32" href="/images/favicon-32x32.png" />
     <link rel="apple-touch-icon" sizes="48x48" href="/images/compass-icon-square.svg" />
@@ -19,16 +19,15 @@
     <link rel="manifest" href="/manifest.json" crossorigin="anonymous" />
     <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/0.17523473.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.3a095137.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.b817f804.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.21b00dcf.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.aefaa6e0.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.db4a1934.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.7f2b64d4.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.84b18ab9.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.41c905a7.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.697c7655.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/constants.94f7c113.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Link.c3d01ee6.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.e092a57e.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Link.6e972e4a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.0976737d.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/2.1a3844ab.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/2.0410d41c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/PostListing.d6662397.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Tags.88c70e77.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Picture.afb50778.js"><title>
@@ -144,7 +143,7 @@
 			
 			<script>
 				{
-					__sveltekit_1nqrec1 = {
+					__sveltekit_ug0yvz = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -154,8 +153,8 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},{"type":"data","data":{featuredPosts:[{title:"Chalmers Guest Lecture on Social Entrepreneurship",date:new Date(1683504000000),tags:["Entrepreneurship","Co-operatives","Economics"],featured:true,slug:"chalmers-guest-lecture-social-entrepreneurship"}]},"uses":{}}];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.3a095137.js"),
-						import("./_app/immutable/entry/app.db4a1934.js")
+						import("./_app/immutable/entry/start.b817f804.js"),
+						import("./_app/immutable/entry/app.84b18ab9.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
