--- a/talks/2022-05-09-chalmers-entrepreneurship-inner-development/index.html
+++ b/talks/2022-05-09-chalmers-entrepreneurship-inner-development/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="/images/favicon.svg" type="image/svg+xml" />
     <link rel="icon" href="/images/favicon-32x32.png" type="image/png" />
-    <link rel="icon" href="/images/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="theme-color" content="#5ac75f" />
     <link rel="apple-touch-icon" sizes="32x32" href="/images/favicon-32x32.png" />
     <link rel="apple-touch-icon" sizes="48x48" href="/images/compass-icon-square.svg" />
@@ -19,14 +19,13 @@
     <link rel="manifest" href="/manifest.json" crossorigin="anonymous" />
     <meta http-equiv="content-security-policy" content="">
 		<link href="../../_app/immutable/assets/0.17523473.css" rel="stylesheet">
-		<link rel="modulepreload" href="../../_app/immutable/entry/start.3a095137.js">
+		<link rel="modulepreload" href="../../_app/immutable/entry/start.b817f804.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/index.21b00dcf.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/singletons.aefaa6e0.js">
-		<link rel="modulepreload" href="../../_app/immutable/entry/app.db4a1934.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/singletons.7f2b64d4.js">
+		<link rel="modulepreload" href="../../_app/immutable/entry/app.84b18ab9.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/preload-helper.41c905a7.js">
-		<link rel="modulepreload" href="../../_app/immutable/nodes/0.697c7655.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/constants.94f7c113.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/Link.c3d01ee6.js">
+		<link rel="modulepreload" href="../../_app/immutable/nodes/0.e092a57e.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/Link.6e972e4a.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/utils.0976737d.js">
 		<link rel="modulepreload" href="../../_app/immutable/nodes/8.3635958a.js"><!-- HEAD_svelte-g2unnv_START --><!-- HTML_TAG_START -->
   <meta charset="UTF-8">
@@ -55,7 +54,7 @@
 			
 			<script>
 				{
-					__sveltekit_1nqrec1 = {
+					__sveltekit_ug0yvz = {
 						base: new URL("../..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -65,8 +64,8 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},{"type":"data","data":{talk:"\u003C!DOCTYPE html\u003E\n\u003Chtml lang=\"en\"\u003E\n\u003Chead\u003E\n  \u003Cmeta charset=\"UTF-8\"\u003E\n  \u003Cmeta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\"\u003E\n  \u003Clink rel=\"icon\" href=\"https:\u002F\u002Fcdn.jsdelivr.net\u002Fgh\u002Fslidevjs\u002Fslidev\u002Fassets\u002Ffavicon.png\"\u003E\n\u003Clink rel=\"stylesheet\" href=\"https:\u002F\u002Ffonts.googleapis.com\u002Fcss2?family=Helvetica+Neue:wght@200;400;600&display=swap\" type=\"text\u002Fcss\"\u003E\n  \u003Cscript type=\"module\" crossorigin src=\"\u002Ftalks\u002F2022-05-09-chalmers-entrepreneurship-inner-development\u002Fassets\u002Findex.030be689.js\"\u003E\u003C\u002Fscript\u003E\n  \u003Clink rel=\"stylesheet\" href=\"\u002Ftalks\u002F2022-05-09-chalmers-entrepreneurship-inner-development\u002Fassets\u002Findex.be5879df.css\"\u003E\n\u003C\u002Fhead\u003E\n\u003Cbody\u003E\n  \u003Cdiv id=\"app\"\u003E\u003C\u002Fdiv\u003E\n  \n  \n\u003C\u002Fbody\u003E\n\u003C\u002Fhtml\u003E\n"},"uses":{"params":["slug"]},"slash":"always"}];
 
 					Promise.all([
-						import("../../_app/immutable/entry/start.3a095137.js"),
-						import("../../_app/immutable/entry/app.db4a1934.js")
+						import("../../_app/immutable/entry/start.b817f804.js"),
+						import("../../_app/immutable/entry/app.84b18ab9.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 8],
