--- a/talks/2022-05-09-chalmers-entrepreneurship-inner-development/index.html
+++ b/talks/2022-05-09-chalmers-entrepreneurship-inner-development/index.html
@@ -17,17 +17,19 @@
     <link rel="apple-touch-icon" sizes="384x384" href="/images/compass-icon-square.svg" />
     <link rel="apple-touch-icon" sizes="512x512" href="/images/compass-icon-square.svg" />
     <link rel="manifest" href="/manifest.json" crossorigin="anonymous" />
-    <meta http-equiv="content-security-policy" content="">
-		<link href="../../_app/immutable/assets/0.17523473.css" rel="stylesheet">
-		<link rel="modulepreload" href="../../_app/immutable/entry/start.b817f804.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/index.21b00dcf.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/singletons.7f2b64d4.js">
-		<link rel="modulepreload" href="../../_app/immutable/entry/app.84b18ab9.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/preload-helper.41c905a7.js">
-		<link rel="modulepreload" href="../../_app/immutable/nodes/0.e092a57e.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/Link.6e972e4a.js">
+    
+		<link href="../../_app/immutable/assets/0.213f870f.css" rel="stylesheet">
+		<link rel="modulepreload" href="../../_app/immutable/entry/start.81b03051.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/scheduler.d8bdb3a2.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/singletons.a17e4f8c.js">
+		<link rel="modulepreload" href="../../_app/immutable/entry/app.98b37160.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/preload-helper.a4192956.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/index.676e8c1b.js">
+		<link rel="modulepreload" href="../../_app/immutable/nodes/0.3d1463ac.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/each.b224194a.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/Link.e38fcbd0.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/utils.0976737d.js">
-		<link rel="modulepreload" href="../../_app/immutable/nodes/8.3635958a.js"><!-- HEAD_svelte-g2unnv_START --><!-- HTML_TAG_START -->
+		<link rel="modulepreload" href="../../_app/immutable/nodes/8.90a3cf00.js"><!-- HEAD_svelte-g2unnv_START --><!-- HTML_TAG_START -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" href="https://cdn.jsdelivr.net/gh/slidevjs/slidev/assets/favicon.png">
@@ -38,34 +40,26 @@
 </head>
 
 <body class="bg-honeydew" data-sveltekit-preload-data="hover">
-    <div id="svelte" style="display: contents">
-
-
-
-
-
-<!-- HTML_TAG_START -->
+    <div id="svelte" style="display: contents">    <!-- HTML_TAG_START -->
   <div id="app"></div>
   
   
-<!-- HTML_TAG_END -->
-
-
+<!-- HTML_TAG_END --> 
 			
 			<script>
 				{
-					__sveltekit_ug0yvz = {
+					__sveltekit_vzl2hn = {
 						base: new URL("../..", location).pathname.slice(0, -1),
 						env: {}
 					};
 
 					const element = document.currentScript.parentElement;
 
-					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},{"type":"data","data":{talk:"\u003C!DOCTYPE html\u003E\n\u003Chtml lang=\"en\"\u003E\n\u003Chead\u003E\n  \u003Cmeta charset=\"UTF-8\"\u003E\n  \u003Cmeta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\"\u003E\n  \u003Clink rel=\"icon\" href=\"https:\u002F\u002Fcdn.jsdelivr.net\u002Fgh\u002Fslidevjs\u002Fslidev\u002Fassets\u002Ffavicon.png\"\u003E\n\u003Clink rel=\"stylesheet\" href=\"https:\u002F\u002Ffonts.googleapis.com\u002Fcss2?family=Helvetica+Neue:wght@200;400;600&display=swap\" type=\"text\u002Fcss\"\u003E\n  \u003Cscript type=\"module\" crossorigin src=\"\u002Ftalks\u002F2022-05-09-chalmers-entrepreneurship-inner-development\u002Fassets\u002Findex.030be689.js\"\u003E\u003C\u002Fscript\u003E\n  \u003Clink rel=\"stylesheet\" href=\"\u002Ftalks\u002F2022-05-09-chalmers-entrepreneurship-inner-development\u002Fassets\u002Findex.be5879df.css\"\u003E\n\u003C\u002Fhead\u003E\n\u003Cbody\u003E\n  \u003Cdiv id=\"app\"\u003E\u003C\u002Fdiv\u003E\n  \n  \n\u003C\u002Fbody\u003E\n\u003C\u002Fhtml\u003E\n"},"uses":{"params":["slug"]},"slash":"always"}];
+					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},{"type":"data","data":{talk:"\u003C!DOCTYPE html>\n\u003Chtml lang=\"en\">\n\u003Chead>\n  \u003Cmeta charset=\"UTF-8\">\n  \u003Cmeta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n  \u003Clink rel=\"icon\" href=\"https://cdn.jsdelivr.net/gh/slidevjs/slidev/assets/favicon.png\">\n\u003Clink rel=\"stylesheet\" href=\"https://fonts.googleapis.com/css2?family=Helvetica+Neue:wght@200;400;600&display=swap\" type=\"text/css\">\n  \u003Cscript type=\"module\" crossorigin src=\"/talks/2022-05-09-chalmers-entrepreneurship-inner-development/assets/index.030be689.js\">\u003C/script>\n  \u003Clink rel=\"stylesheet\" href=\"/talks/2022-05-09-chalmers-entrepreneurship-inner-development/assets/index.be5879df.css\">\n\u003C/head>\n\u003Cbody>\n  \u003Cdiv id=\"app\">\u003C/div>\n  \n  \n\u003C/body>\n\u003C/html>\n"},"uses":{"params":["slug"]},"slash":"always"}];
 
 					Promise.all([
-						import("../../_app/immutable/entry/start.b817f804.js"),
-						import("../../_app/immutable/entry/app.84b18ab9.js")
+						import("../../_app/immutable/entry/start.81b03051.js"),
+						import("../../_app/immutable/entry/app.98b37160.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 8],
