--- a/about.html
+++ b/about.html
@@ -19,13 +19,13 @@
     <link rel="manifest" href="/manifest.json" crossorigin="anonymous" />
     
 		<link href="./_app/immutable/assets/0.213f870f.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.81b03051.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.5f3c1d79.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.d8bdb3a2.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.a17e4f8c.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.98b37160.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.9906849c.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.facc37ff.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.a4192956.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.676e8c1b.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.3d1463ac.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.d187a9fc.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.b224194a.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Link.e38fcbd0.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.0976737d.js">
@@ -37,11 +37,11 @@
     <div id="svelte" style="display: contents">    <header class="flex flex-1 justify-between p-4 max-w-6xl mx-auto flex-wrap gap-y-4 gap-x-2"><a href="/" class="link">Samuel Plumppu</a> <nav class="flex space-x-2 xs:space-x-4"><a href="/blog" class="link">Blog</a><a href="/about" class="link">About</a><a href="/talks" class="link">Talks</a></nav></header> <div class="container mx-auto max-w-6xl p-4 pb-0"><h1 class="text-4xl xs:text-5xl sm:text-6xl lg:text-7xl leading-none font-black tracking-tight mb-8" data-svelte-h="svelte-11ghe85">More about me</h1> <h2 class="text-lg xs:text-2xl font-bold pb-4" data-svelte-h="svelte-55v543">One of my most exciting orienteering memories so far:</h2> <figure class="flex flex-col items-center"><picture><source srcset="/images/Tiomila2015.webp" type="image/webp" width="1024" height="661"> <img src="/images/Tiomila2015.jpg" width="1024" height="661" alt="Night time start of the Tiomila 2015 orienteering relay" class="max-w-5xl pb-4 w-full"></picture> <figcaption class="max-w-prose">Seconds after the start of Tiomila 2015, one of the world&#39;s largest
         orienteering relays. I ran the first leg and somehow got to the top 5 as
         we left the arena, later finishing the course as <a href="https://10mila.se/index.php/sv/?option=com_tiomilaresults&amp;year=70&amp;class=8&amp;leg=1&amp;total=1" compact class="link compact">19th</a> of 318 runners. Best of all, photographer <a href="https://www.peterholgersson.se/" compact class="link compact">Peter Holgersson</a>
-        captured this moment so beautifully.</figcaption></figure></div> <footer class="container px-4 pb-4 text-center max-w-6xl mx-auto font-light"><hr class="my-16 max-w-sm mx-auto border-ming" id="contact"> <h2 class="text-xl xs:text-2xl sm:text-3xl lg:text-4xl font-black tracking-tight leading-none mb-6" data-svelte-h="svelte-g9x2r6">Let&#39;s co-create a sustainable future!</h2>     <a href="#" class="bg-mantis py-3 px-8 inline-flex rounded-md shadow-lg hover:shadow-xl transform-gpu hover:scale-105 duration-150 justify-self-center text-black font-black justify-center"><span class="whitespace-nowrap">Show Email</span></a> <p class="mt-8">© 2015 - 2023 Samuel Plumppu</p> <div class="flex justify-center space-x-8 items-center my-8 flex-wrap" data-svelte-h="svelte-86npz9"><a href="https://matrix.to/#/@Greenheart:matrix.org" target="_blank" rel="noopener noreferrer" aria-label="Message me securely with the Matrix protocol"><img src="/images/matrix-logo.svg" alt="Matrix.org logo" class="h-8"></a> <a href="https://github.com/Greenheart" target="_blank" rel="noopener noreferrer" aria-label="See my libre software at GitHub"><img src="/images/github.svg" alt="GitHub" class="w-8 h-8"></a> <a href="https://fosstodon.org/@Greenheart" target="_blank" rel="me noopener noreferrer" aria-label="Follow me on Mastodon"><img src="/images/mastodon-logo.svg" alt="Mastodon" class="w-8 h-8"></a> <a href="https://linkedin.com/in/samuelplumppu" target="_blank" rel="noopener noreferrer" aria-label="Connect with me on LinkedIn"><img src="/images/linkedin.svg" alt="LinkedIn" class="w-8 h-8"></a></div></footer> <style lang="postcss" data-svelte-h="svelte-e7yufa">@media (max-width:360px){header{justify-content:center!important}}</style> 
+        captured this moment so beautifully.</figcaption></figure></div> <footer class="container px-4 pb-4 text-center max-w-6xl mx-auto font-light"><hr class="my-16 max-w-sm mx-auto border-ming" id="contact"> <h2 class="text-xl xs:text-2xl sm:text-3xl lg:text-4xl font-black tracking-tight leading-none mb-6" data-svelte-h="svelte-g9x2r6">Let&#39;s co-create a sustainable future!</h2>     <a href="#" class="bg-mantis py-3 px-8 inline-flex rounded-md shadow-lg hover:shadow-xl transform-gpu hover:scale-105 duration-150 justify-self-center text-black font-black justify-center"><span class="whitespace-nowrap">Show Email</span></a> <p class="mt-8">© 2015 - 2024 Samuel Plumppu</p> <div class="flex justify-center space-x-8 items-center my-8 flex-wrap" data-svelte-h="svelte-86npz9"><a href="https://matrix.to/#/@Greenheart:matrix.org" target="_blank" rel="noopener noreferrer" aria-label="Message me securely with the Matrix protocol"><img src="/images/matrix-logo.svg" alt="Matrix.org logo" class="h-8"></a> <a href="https://github.com/Greenheart" target="_blank" rel="noopener noreferrer" aria-label="See my libre software at GitHub"><img src="/images/github.svg" alt="GitHub" class="w-8 h-8"></a> <a href="https://fosstodon.org/@Greenheart" target="_blank" rel="me noopener noreferrer" aria-label="Follow me on Mastodon"><img src="/images/mastodon-logo.svg" alt="Mastodon" class="w-8 h-8"></a> <a href="https://linkedin.com/in/samuelplumppu" target="_blank" rel="noopener noreferrer" aria-label="Connect with me on LinkedIn"><img src="/images/linkedin.svg" alt="LinkedIn" class="w-8 h-8"></a></div></footer> <style lang="postcss" data-svelte-h="svelte-e7yufa">@media (max-width:360px){header{justify-content:center!important}}</style> 
 			
 			<script>
 				{
-					__sveltekit_vzl2hn = {
+					__sveltekit_1ix5mqi = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -51,8 +51,8 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.81b03051.js"),
-						import("./_app/immutable/entry/app.98b37160.js")
+						import("./_app/immutable/entry/start.5f3c1d79.js"),
+						import("./_app/immutable/entry/app.facc37ff.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
