--- a/talks/2021-05-17-chalmers-sustainability-entrepreneurship/index.html
+++ b/talks/2021-05-17-chalmers-sustainability-entrepreneurship/index.html
@@ -19,13 +19,13 @@
     <link rel="manifest" href="/manifest.json" crossorigin="anonymous" />
     
 		<link href="../../_app/immutable/assets/0.213f870f.css" rel="stylesheet">
-		<link rel="modulepreload" href="../../_app/immutable/entry/start.81b03051.js">
+		<link rel="modulepreload" href="../../_app/immutable/entry/start.5f3c1d79.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/scheduler.d8bdb3a2.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/singletons.a17e4f8c.js">
-		<link rel="modulepreload" href="../../_app/immutable/entry/app.98b37160.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/singletons.9906849c.js">
+		<link rel="modulepreload" href="../../_app/immutable/entry/app.facc37ff.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/preload-helper.a4192956.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/index.676e8c1b.js">
-		<link rel="modulepreload" href="../../_app/immutable/nodes/0.3d1463ac.js">
+		<link rel="modulepreload" href="../../_app/immutable/nodes/0.d187a9fc.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/each.b224194a.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/Link.e38fcbd0.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/utils.0976737d.js">
@@ -49,7 +49,7 @@
 			
 			<script>
 				{
-					__sveltekit_vzl2hn = {
+					__sveltekit_1ix5mqi = {
 						base: new URL("../..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -59,8 +59,8 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},{"type":"data","data":{talk:"\u003C!DOCTYPE html>\n\u003Chtml lang=\"en\">\n\u003Chead>\n  \u003Cmeta charset=\"UTF-8\">\n  \u003Cmeta name=\"viewport\" content=\"width=device-width, initial-scale=1.0\">\n  \u003Clink rel=\"icon\" type=\"image/png\" href=\"/talks/2021-05-17-chalmers-sustainability-entrepreneurship/assets/8b9eb19119592679c97707c257d88026.a02f38e2.png\">\n  \n  \u003Cscript type=\"module\" crossorigin src=\"/talks/2021-05-17-chalmers-sustainability-entrepreneurship/assets/index.ef644bfc.js\">\u003C/script>\n    \u003Clink rel=\"modulepreload\" href=\"/talks/2021-05-17-chalmers-sustainability-entrepreneurship/assets/vendor.8652a162.js\">\n    \u003Clink rel=\"stylesheet\" href=\"/talks/2021-05-17-chalmers-sustainability-entrepreneurship/assets/vendor.86eee491.css\">\n  \u003C/head>\n\u003Cbody>\n  \u003Cdiv id=\"app\">\u003C/div>\n  \n  \n\u003C/body>\n\u003C/html>\n"},"uses":{"params":["slug"]},"slash":"always"}];
 
 					Promise.all([
-						import("../../_app/immutable/entry/start.81b03051.js"),
-						import("../../_app/immutable/entry/app.98b37160.js")
+						import("../../_app/immutable/entry/start.5f3c1d79.js"),
+						import("../../_app/immutable/entry/app.facc37ff.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 8],
