--- a/blog.html
+++ b/blog.html
@@ -18,28 +18,28 @@
     <link rel="apple-touch-icon" sizes="512x512" href="/images/compass-icon-square.svg" />
     <link rel="manifest" href="/manifest.json" crossorigin="anonymous" />
     
-		<link href="./_app/immutable/assets/0.CuGiMuAf.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CWYtpOKv.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DsLBwz5T.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.Cp43ptvP.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DsXFFhfi.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.CWBbKO0c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/render.Bjr-2jw3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/utils.gEzIPUY-.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/svelte-head.CFiusxVz.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.1Vpr6LmH.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/if.DwhiUzlY.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.XEQ49Y8H.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.rVin-2HV.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/each.D5BdxrdA.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/EncryptedEmail.6ujW_PSU.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.B39DS3Wx.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/class.wfQaVVR6.js">
+		<link href="./_app/immutable/assets/0.BTOyscQ6.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DPbbf5VL.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CSc9sQIZ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.3yWryelU.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.C3kwwckU.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.DqUr4CkK.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/render.CMuQyiUg.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/utils.Bm2lmxYA.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/svelte-head.CkGjxJXq.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.DbmNBRrG.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/if.Ium4IDmb.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.iqhdHatb.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.D2uRUv-P.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/each.Dn0EKMOB.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/EncryptedEmail.BvfjzKQW.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.BLCt1-6O.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/class.Cfm0yeyW.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.i10DS0tD.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Link.BfbGSPKk.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/4.C4v8XX9B.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/PostListing.HW2GVEhI.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Tags.BVVcwMBd.js"><!--[--><!--]--><title>
+		<link rel="modulepreload" href="./_app/immutable/chunks/Link.CshzshkW.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/4.Bz-chgNr.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/PostListing.CGJs16PB.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Tags.DBuBcq8K.js"><!--[--><!--]--><title>
         Samuel Plumppu | Sustainability Entrepreneur &amp; Fullstack Developer
     </title>
 </head>
@@ -49,7 +49,7 @@
 			
 			<script>
 				{
-					__sveltekit_7bosi8 = {
+					__sveltekit_5ajpkt = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -58,8 +58,8 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},{"type":"data","data":{posts:[{title:"Chalmers Guest Lecture on Social Entrepreneurship",date:new Date(1683504000000),tags:["Entrepreneurship","Co-operatives","Economics"],featured:true,slug:"chalmers-guest-lecture-social-entrepreneurship"},{title:"Improving Oh My Zsh Startup Time with Lazy Loading",date:new Date(1679529600000),tags:["DX","Code Snippet"],slug:"improving-shell-startup-with-lazy-loading"},{title:"Automatic Internal and External Links in SvelteKit",date:new Date(1627689600000),tags:["TypeScript","Svelte","SvelteKit","Code Snippet"],slug:"automatic-internal-external-links-in-sveltekit"},{title:"Use the Web Crypto API to Generate a Cryptographically Secure Password in the Browser and Node.js",date:new Date(1627430400000),tags:["JavaScript","Web Crypto API","Node.js"],slug:"generate-password-in-browser-web-crypto-api"},{title:"Rename File Extensions with Node.js",date:new Date(1627344000000),tags:["Code Snippet","JavaScript","Node.js"],slug:"nodejs-rename-file-extensions"},{title:"Update Your Git Commit Email Address Before Pushing to Remote Repository",date:new Date(1626998400000),tags:["Git","Code Snippet"],slug:"git-rewrite-commit-email"},{title:"Use Firefox Bookmark Keywords to Quickly Get to Websites You Visit Often with Only 4 Keystrokes",date:new Date(1626912000000),tags:["Firefox","Productivity"],slug:"firefox-bookmark-keywords"}]},"uses":{}}];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CWYtpOKv.js"),
-						import("./_app/immutable/entry/app.DsXFFhfi.js")
+						import("./_app/immutable/entry/start.DPbbf5VL.js"),
+						import("./_app/immutable/entry/app.C3kwwckU.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
