--- a/talks.html
+++ b/talks.html
@@ -18,26 +18,26 @@
     <link rel="apple-touch-icon" sizes="512x512" href="/images/compass-icon-square.svg" />
     <link rel="manifest" href="/manifest.json" crossorigin="anonymous" />
     
-		<link href="./_app/immutable/assets/0.CuGiMuAf.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.CWYtpOKv.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.DsLBwz5T.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.Cp43ptvP.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.DsXFFhfi.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.CWBbKO0c.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/render.Bjr-2jw3.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/utils.gEzIPUY-.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/svelte-head.CFiusxVz.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.1Vpr6LmH.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/if.DwhiUzlY.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.XEQ49Y8H.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.rVin-2HV.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/each.D5BdxrdA.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/EncryptedEmail.6ujW_PSU.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.B39DS3Wx.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/class.wfQaVVR6.js">
+		<link href="./_app/immutable/assets/0.BTOyscQ6.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DPbbf5VL.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CSc9sQIZ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.3yWryelU.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.C3kwwckU.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.DqUr4CkK.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/render.CMuQyiUg.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/utils.Bm2lmxYA.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/svelte-head.CkGjxJXq.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.DbmNBRrG.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/if.Ium4IDmb.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.iqhdHatb.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.D2uRUv-P.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/each.Dn0EKMOB.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/EncryptedEmail.BvfjzKQW.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.BLCt1-6O.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/class.Cfm0yeyW.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.i10DS0tD.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Link.BfbGSPKk.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/7.DPSFgski.js"><!--[--><!--]--><title>
+		<link rel="modulepreload" href="./_app/immutable/chunks/Link.CshzshkW.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/7.DVSss0Ou.js"><!--[--><!--]--><title>
         Samuel Plumppu | Sustainability Entrepreneur &amp; Fullstack Developer
     </title>
 </head>
@@ -47,7 +47,7 @@
 			
 			<script>
 				{
-					__sveltekit_7bosi8 = {
+					__sveltekit_5ajpkt = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
@@ -56,8 +56,8 @@
 					const data = [{"type":"data","data":null,"uses":{},"slash":"ignore"},{"type":"data","data":{talks:["2024-04-11-chalmers-entrepreneurship","2023-05-08-chalmers-entrepreneurship","2022-12-15-idg-toolkit-launch","2022-05-09-chalmers-entrepreneurship-inner-development","2021-09-11-hackforfuture-co-creation","2021-05-17-chalmers-sustainability-entrepreneurship"]},"uses":{}}];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.CWYtpOKv.js"),
-						import("./_app/immutable/entry/app.DsXFFhfi.js")
+						import("./_app/immutable/entry/start.DPbbf5VL.js"),
+						import("./_app/immutable/entry/app.C3kwwckU.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 7],
