--- a/about.html
+++ b/about.html
@@ -19,28 +19,28 @@
     <link rel="manifest" href="/manifest.json" crossorigin="anonymous" />
     
 		<link href="./_app/immutable/assets/0._4iNjgz8.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.D4aTBn4v.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.C93jATgS.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.enW9DSRT.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.yxHTGjhU.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CzoJn5ZQ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.DLcT9aC9.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/render.DtelHnQT.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/events.BGQ2uM7R.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/svelte-head.3ee7d2ID.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CF7-n5Bm.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/if.CNA-zovM.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/props.Dxc433qR.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.XJ8ovWff.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/legacy.DpqE76vO.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/each.BZJG3ECH.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/EncryptedEmail.DDYddAWA.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.DSqulqLD.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/class.YQlrdre8.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.C5YwFdFa.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.B_dgKCRM.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.CZ9sv74Z.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.niSTn1dH.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.HrVkuXgX.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.VKeerhJo.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/render.BIbXRUc8.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/events.CmnV32ip.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/svelte-head.D2SzqQvH.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.CDKbCVjp.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/if.D8G32cvu.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/props.DbqUnqER.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.DjUXpviV.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/legacy.CWQe4euz.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/each.ok0jsPro.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/EncryptedEmail.uzSXxKxa.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/attributes.B4mOCj29.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/class.DTLb6izZ.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/utils.i10DS0tD.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Link.CKQhyoEF.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.C1XuGfWo.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/Picture.Uyt0ZJm6.js"><!--[--><!--]--><title>
+		<link rel="modulepreload" href="./_app/immutable/chunks/Link.M3Map4PV.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.BYJa7UfE.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Picture.BC-zYBcE.js"><!--[--><!--]--><title>
         Samuel Plumppu | Sustainability Entrepreneur &amp; Fullstack Developer
     </title>
 </head>
@@ -48,19 +48,19 @@
 <body class="bg-honeydew" data-sveltekit-preload-data="hover">
     <div id="svelte" style="display: contents"><!--[--><!--[--><!----><!--[!--><!----> <header class="flex flex-1 justify-between p-4 max-w-6xl mx-auto flex-wrap gap-y-4 gap-x-2"><a href="/" class="link"><!---->Samuel Plumppu<!----></a><!----> <nav class="flex space-x-2 xs:space-x-4"><!--[--><a href="/blog" class="link"><!---->Blog<!----></a><a href="/about" class="link"><!---->About<!----></a><a href="/talks" class="link"><!---->Talks<!----></a><!--]--></nav></header> <div class="container mx-auto max-w-6xl p-4 pb-0"><!----><!----><h1 class="text-4xl xs:text-5xl sm:text-6xl lg:text-7xl leading-none font-black tracking-tight mb-8">More about me</h1> <h2 class="text-lg xs:text-2xl font-bold pb-4">One of my most exciting orienteering memories so far:</h2> <figure class="flex flex-col items-center"><picture><!--[--><source srcset="/images/Tiomila2015.webp" type="image/webp" width="1024" height="661"><!--]--> <img src="/images/Tiomila2015.jpg" width="1024" height="661" alt="Night time start of the Tiomila 2015 orienteering relay" class="max-w-5xl pb-4 w-full"></picture><!----> <figcaption class="max-w-prose">Seconds after the start of Tiomila 2015, one of the world's largest
         orienteering relays. I ran the first leg and somehow got to the top 5 as
-        we left the arena, later finishing the course as <a href="https://10mila.se/index.php/sv/?option=com_tiomilaresults&amp;year=70&amp;class=8&amp;leg=1&amp;total=1" class="link compact"><!---->19th<!----></a><!----> of 318 runners. Best of all, photographer <a href="https://www.peterholgersson.se/" class="link compact"><!---->Peter Holgersson<!----></a><!----> captured this moment so beautifully.</figcaption></figure><!----><!----></div> <footer class="container px-4 pb-4 text-center max-w-6xl mx-auto font-light"><hr class="my-16 max-w-sm mx-auto border-ming" id="contact"> <h2 class="text-xl xs:text-2xl sm:text-3xl lg:text-4xl font-black tracking-tight leading-none mb-6">Let's co-create a sustainable future!</h2>   <a href="#" class="bg-mantis py-3 px-8 inline-flex rounded-md shadow-lg hover:shadow-xl transform-gpu hover:scale-105 duration-150 justify-self-center text-black font-black justify-center "><span class="whitespace-nowrap">Email me</span></a><!----> <p class="mt-8">© 2015 - 2024 Samuel Plumppu</p> <div class="flex justify-center space-x-8 items-center my-8 flex-wrap"><a href="https://matrix.to/#/@Greenheart:matrix.org" target="_blank" rel="noopener noreferrer" aria-label="Message me securely with the Matrix protocol"><img src="/images/matrix-logo.svg" alt="Matrix.org logo" class="h-8"></a> <a href="https://github.com/Greenheart" target="_blank" rel="noopener noreferrer" aria-label="See my libre software at GitHub"><img src="/images/github.svg" alt="GitHub" class="w-8 h-8"></a> <a href="https://fosstodon.org/@Greenheart" target="_blank" rel="me noopener noreferrer" aria-label="Follow me on Mastodon"><img src="/images/mastodon-logo.svg" alt="Mastodon" class="w-8 h-8"></a> <a href="https://linkedin.com/in/samuelplumppu" target="_blank" rel="noopener noreferrer" aria-label="Connect with me on LinkedIn"><img src="/images/linkedin.svg" alt="LinkedIn" class="w-8 h-8"></a></div></footer><!----> <style lang="postcss">@media (max-width:360px){header{justify-content:center!important}}</style><!--]--><!----><!--]--> <!--[!--><!--]--><!--]-->
+        we left the arena, later finishing the course as <a href="https://10mila.se/index.php/sv/?option=com_tiomilaresults&amp;year=70&amp;class=8&amp;leg=1&amp;total=1" class="link compact"><!---->19th<!----></a><!----> of 318 runners. Best of all, photographer <a href="https://www.peterholgersson.se/" class="link compact"><!---->Peter Holgersson<!----></a><!----> captured this moment so beautifully.</figcaption></figure><!----><!----></div> <footer class="container px-4 pb-4 text-center max-w-6xl mx-auto font-light"><hr class="my-16 max-w-sm mx-auto border-ming" id="contact"> <h2 class="text-xl xs:text-2xl sm:text-3xl lg:text-4xl font-black tracking-tight leading-none mb-6">Let's co-create a sustainable future!</h2>   <a href="#" class="bg-mantis py-3 px-8 inline-flex rounded-md shadow-lg hover:shadow-xl transform-gpu hover:scale-105 duration-150 justify-self-center text-black font-black justify-center "><span class="whitespace-nowrap">Email me</span></a><!----> <p class="mt-8">© 2015 - 2025 Samuel Plumppu</p> <div class="flex justify-center space-x-8 items-center my-8 flex-wrap"><a href="https://matrix.to/#/@Greenheart:matrix.org" target="_blank" rel="noopener noreferrer" aria-label="Message me securely with the Matrix protocol"><img src="/images/matrix-logo.svg" alt="Matrix.org logo" class="h-8"></a> <a href="https://github.com/Greenheart" target="_blank" rel="noopener noreferrer" aria-label="See my libre software at GitHub"><img src="/images/github.svg" alt="GitHub" class="w-8 h-8"></a> <a href="https://fosstodon.org/@Greenheart" target="_blank" rel="me noopener noreferrer" aria-label="Follow me on Mastodon"><img src="/images/mastodon-logo.svg" alt="Mastodon" class="w-8 h-8"></a> <a href="https://linkedin.com/in/samuelplumppu" target="_blank" rel="noopener noreferrer" aria-label="Connect with me on LinkedIn"><img src="/images/linkedin.svg" alt="LinkedIn" class="w-8 h-8"></a></div></footer><!----> <style lang="postcss">@media (max-width:360px){header{justify-content:center!important}}</style><!--]--><!----><!--]--> <!--[!--><!--]--><!--]-->
 			
 			<script>
 				{
-					__sveltekit_1kg5vy7 = {
+					__sveltekit_1rj8y5x = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.D4aTBn4v.js"),
-						import("./_app/immutable/entry/app.CzoJn5ZQ.js")
+						import("./_app/immutable/entry/start.C5YwFdFa.js"),
+						import("./_app/immutable/entry/app.HrVkuXgX.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
