--- a/talks/2021-09-11-hackforfuture-co-creation/index.html
+++ b/talks/2021-09-11-hackforfuture-co-creation/index.html
@@ -19,28 +19,28 @@
     <link rel="manifest" href="/manifest.json" crossorigin="anonymous" />
     
 		<link href="../../_app/immutable/assets/0._4iNjgz8.css" rel="stylesheet">
-		<link rel="modulepreload" href="../../_app/immutable/entry/start.D4aTBn4v.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/entry.C93jATgS.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/runtime.enW9DSRT.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/index-client.yxHTGjhU.js">
-		<link rel="modulepreload" href="../../_app/immutable/entry/app.CzoJn5ZQ.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/preload-helper.DLcT9aC9.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/render.DtelHnQT.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/events.BGQ2uM7R.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/svelte-head.3ee7d2ID.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/disclose-version.CF7-n5Bm.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/if.CNA-zovM.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/props.Dxc433qR.js">
-		<link rel="modulepreload" href="../../_app/immutable/nodes/0.XJ8ovWff.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/legacy.DpqE76vO.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/each.BZJG3ECH.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/EncryptedEmail.DDYddAWA.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/attributes.DSqulqLD.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/class.YQlrdre8.js">
+		<link rel="modulepreload" href="../../_app/immutable/entry/start.C5YwFdFa.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/entry.B_dgKCRM.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/runtime.CZ9sv74Z.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/index-client.niSTn1dH.js">
+		<link rel="modulepreload" href="../../_app/immutable/entry/app.HrVkuXgX.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/preload-helper.VKeerhJo.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/render.BIbXRUc8.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/events.CmnV32ip.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/svelte-head.D2SzqQvH.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/disclose-version.CDKbCVjp.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/if.D8G32cvu.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/props.DbqUnqER.js">
+		<link rel="modulepreload" href="../../_app/immutable/nodes/0.DjUXpviV.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/legacy.CWQe4euz.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/each.ok0jsPro.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/EncryptedEmail.uzSXxKxa.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/attributes.B4mOCj29.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/class.DTLb6izZ.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/utils.i10DS0tD.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/Link.CKQhyoEF.js">
-		<link rel="modulepreload" href="../../_app/immutable/nodes/8.D4wKUsBN.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/html.BRjWue5H.js"><!--[--><!---->
+		<link rel="modulepreload" href="../../_app/immutable/chunks/Link.M3Map4PV.js">
+		<link rel="modulepreload" href="../../_app/immutable/nodes/8.CxX5EO5p.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/html.BmwotYDG.js"><!--[--><!---->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="icon" type="image/png" href="/talks/2021-09-11-hackforfuture-co-creation/assets/8b9eb19119592679c97707c257d88026.a02f38e2.png">
@@ -60,15 +60,15 @@
 			
 			<script>
 				{
-					__sveltekit_1kg5vy7 = {
+					__sveltekit_1rj8y5x = {
 						base: new URL("../..", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../../_app/immutable/entry/start.D4aTBn4v.js"),
-						import("../../_app/immutable/entry/app.CzoJn5ZQ.js")
+						import("../../_app/immutable/entry/start.C5YwFdFa.js"),
+						import("../../_app/immutable/entry/app.HrVkuXgX.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 8],
