--- a/blog.html
+++ b/blog.html
@@ -19,11 +19,11 @@
     <link rel="manifest" href="/manifest.json" crossorigin="anonymous" />
     
 		<link href="./_app/immutable/assets/0.Cq4FTQCo.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.D06EDB75.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.B6asVa9w.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.QB9E7FvD.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Bav4jSKp.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/runtime.D9GYYi2j.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-client.BqUYPEQL.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CI_FsbAP.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.CNU4cXPY.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.Ch4ynZPi.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/render.wfIHiuEH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/events.CWL5skiF.js">
@@ -31,7 +31,7 @@
 		<link rel="modulepreload" href="./_app/immutable/chunks/disclose-version.D5g0bMZL.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/if.a4W8LPSv.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/props.DQfrSCu4.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.Dh7U4bud.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.BuAlWh9T.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/legacy.CjxW4MSY.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/each.BNH6Fkfn.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/EncryptedEmail.CTxfAFyd.js">
@@ -51,15 +51,15 @@
 			
 			<script>
 				{
-					__sveltekit_1ltee1o = {
+					__sveltekit_1e2zi8p = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.D06EDB75.js"),
-						import("./_app/immutable/entry/app.CI_FsbAP.js")
+						import("./_app/immutable/entry/start.QB9E7FvD.js"),
+						import("./_app/immutable/entry/app.CNU4cXPY.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 4],
