--- a/about.html
+++ b/about.html
@@ -55,26 +55,26 @@
         <link rel="manifest" href="/manifest.json" crossorigin="anonymous" />
         
 		<link href="./_app/immutable/assets/0.CdHi2MY-.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DKkPOdbx.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DSB8nZX4.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BhddPXjO.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/w_B2EKov.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CUSAsMgs.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BSPgLUic.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Cf-6ZMrS.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/D--1SKTa.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.DIuUDK1D.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DGzWzM9A.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BkOqStu2.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/JpYt70Uo.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/D82LOmmD.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/C-WsSzzI.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.STnANqi4.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CCNK8JV7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/DsnmJJEf.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BnpugrVD.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/C7WgT5_Y.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.266eB-q8.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/CzfqKHad.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BiHcPtAr.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/jhhFANlb.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/DWuAT_t_.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CcivZoHT.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/jFBRjycH.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.B4B9O56k.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/Dpz2Srwl.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/BfVz_1HL.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/CSlaBubd.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DqbUTkHH.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/CfzHRJhJ.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/BcPhtsrx.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/3.9TWGZMcM.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/RY5qyt4s.js"><!--[--><!--]--><title>
+		<link rel="modulepreload" href="./_app/immutable/chunks/DKwUUT9N.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/3.FzEGBxPF.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/DW0K18NV.js"><!--[--><!--]--><title>
         Samuel Plumppu | Sustainability Entrepreneur &amp; Fullstack Developer
     </title>
     </head>
@@ -92,15 +92,15 @@
 			
 			<script>
 				{
-					__sveltekit_ws81cg = {
+					__sveltekit_ol5dn5 = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DKkPOdbx.js"),
-						import("./_app/immutable/entry/app.Cf-6ZMrS.js")
+						import("./_app/immutable/entry/start.DIuUDK1D.js"),
+						import("./_app/immutable/entry/app.STnANqi4.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
