--- a/talks/2023-05-08-chalmers-entrepreneurship/index.html
+++ b/talks/2023-05-08-chalmers-entrepreneurship/index.html
@@ -55,18 +55,18 @@
         <link rel="manifest" href="/manifest.json" crossorigin="anonymous" />
         
 		<link href="../../_app/immutable/assets/0.CdHi2MY-.css" rel="stylesheet">
-		<link rel="modulepreload" href="../../_app/immutable/entry/start.DIuUDK1D.js">
-		<link rel="modulepreload" href="../../_app/immutable/chunks/DGzWzM9A.js">
+		<link rel="modulepreload" href="../../_app/immutable/entry/start.CA87t7Vi.js">
+		<link rel="modulepreload" href="../../_app/immutable/chunks/CWisf7ET.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/BkOqStu2.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/JpYt70Uo.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/D82LOmmD.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/C-WsSzzI.js">
-		<link rel="modulepreload" href="../../_app/immutable/entry/app.STnANqi4.js">
+		<link rel="modulepreload" href="../../_app/immutable/entry/app.BGcAgphx.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/CCNK8JV7.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/DsnmJJEf.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/CcivZoHT.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/jFBRjycH.js">
-		<link rel="modulepreload" href="../../_app/immutable/nodes/0.B4B9O56k.js">
+		<link rel="modulepreload" href="../../_app/immutable/nodes/0.7IScI4ov.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/Dpz2Srwl.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/BfVz_1HL.js">
 		<link rel="modulepreload" href="../../_app/immutable/chunks/CSlaBubd.js">
@@ -302,15 +302,15 @@
 			
 			<script>
 				{
-					__sveltekit_ol5dn5 = {
+					__sveltekit_1gex35h = {
 						base: new URL("../..", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("../../_app/immutable/entry/start.DIuUDK1D.js"),
-						import("../../_app/immutable/entry/app.STnANqi4.js")
+						import("../../_app/immutable/entry/start.CA87t7Vi.js"),
+						import("../../_app/immutable/entry/app.BGcAgphx.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 8],
